--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,5 @@
-streamlit_lottie
-streamlit_option_menu
+pycryptodome==3.15.0
+requests==2.28.1
+streamlit==1.11.0
+streamlit_lottie==0.0.3
+streamlit_option_menu==0.3.2
